spacing and Insight profile image issues

--- a/themes/custom/athena/assets/styles/modules/_insight.scss
+++ b/themes/custom/athena/assets/styles/modules/_insight.scss
@@ -257,7 +257,8 @@
 		padding: 10px 0;
 	} 
 	.insight-banner {
-		.item {.row {width:auto;}.profile {@media screen and (max-width: 540px){text-align:center; padding-top:10px;}	img { @media screen and (max-width: 480px){	width:180px;}}}}
+		.col-md-4.mobilePadding {border-left:1px solid #eee;}
+		.item {.row {width:auto;}.profile {@media screen and (max-width: 540px){text-align:center; padding-top:10px;}	img {width:100%; @media screen and (max-width: 480px){	width:180px;}}}}
 		.col-md-12{
 			 span {
 				 font-weight: 600;
